# pre-legal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
.claude/skills/cerebras/: SKILL.md
backend/: pyproject.toml
backend/app/: auth.py  catalog.py  chat.py  config.py  db.py  documents.py  llm.py  main.py
backend/tests/: test_api.py  test_auth.py  test_chat.py  test_templates.py
front-end/src/app/: layout.tsx  page.tsx
front-end/src/components/: DownloadPdfButton.test.tsx  NdaForm.tsx  NdaPreview.test.tsx
frontend/: jest.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/login/: page.test.tsx  page.tsx
frontend/src/components/: ChatPanel.test.tsx  ChatPanel.tsx  DocumentPdfDocument.tsx  DocumentPreview.tsx  DownloadButton.test.tsx  DownloadButton.tsx  DownloadPdfButton.tsx  Header.tsx  NdaChat.test.tsx  NdaChat.tsx  NdaForm.test.tsx  NdaPdfDocument.tsx  NdaPreview.tsx
frontend/src/lib/: api.ts  markdown.ts  nda.test.ts  nda.ts  useAuth.ts  useRenderedDocument.tsx
frontend/test/: react-markdown-mock.tsx
scripts/: start-mac.sh  stop-mac.sh
tasks/: PL-2.md  PL-3.md  PL-4.md  PL-5.md  PL-6.md  PL-7.md
templates/: LICENSE.txt
